# rilis

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  windows.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: cd.yml  ci.yml
src/: args.rs  config.rs  lib.rs  logger.rs  main.rs
src/pw/: mod.rs
src/ssh/: client.rs  client_sftp.rs  command.rs  mod.rs  scp.rs  server.rs  ubuntu.rs
